11/20/25
  Workers - ImmatureGoat
  Things changed:
    Fixed the credits for ImmatureGoat
    Added a link for Studio BDT in the credits
    Underlined the link that opens the credits
    Fixed the calendar white sides to be dark
    Fixed the calendar day colors to be dark to be more visible
    Renamed everything Crescendo Initiative to just Crescendo
    Hamburger now shows on all mobile phones and is visible
    Updated musicians page to match color scheme
    Updated seniors page to match color scheme
    Updated students page to match color scheme

11/19/25
  Workers - NeoRazer, ImmatureGoat
  Things changed:
    Attempted to fix mobile bugs.
    Updated logo. 
    Changed color scheme (i'm a fricking genius)

11/18/25
  Workers - ImmatureGoat, SamZua, NeoRazer
  Things changed:
    Fixed navigation bar bugs where it didnt stop scrolling in the right stop and the home button didn't work.
    Changed color scheme
    Made map include locations (samuel cooked)

11/17/25
  Workers - ImmatureGoat, SamZua
  Things changed: 
    Moved Hero down
    Fixed grammatical errors
    Made text more visible on main page, student page, and senior page