@@ -270,23 +270,37 @@
     </section>
 
     <!-- Map Section -->
-    <section id="map" class="map-section">
+    <section id="map-section" class="map-section">
         <div class="container">
             <h2 class="section-title" data-aos="fade-up" style="color: #F2E6C9;">Where We Play</h2>
             <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Bringing music to communities across North Georgia</p>
             
             <div class="map-container" data-aos="fade-up" data-aos-delay="200">
-                <iframe
-                    src="https://www.google.com/maps/d/u/0/embed?mid=1lYC50pphGHLGXnu97MK7jDirvCo4748&ehbc=2E312F"
-                    width="100%"
-                    height="450"
-                    style="border:0;"
-                    allowfullscreen=""
-                    loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
+                <div id="map"></div>
             </div>
-            
+
+            <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+            <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+            <script>
+                const map = L.map('map').setView([34.12, -84.17], 11);
+
+                L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                    maxZoom: 19,
+                }).addTo(map);
+
+                const locations = [
+                    { name: "The Oaks at Shiloh Point", coords: [34.184744, -84.191021] },
+                    { name: "Towne Club Windermere", coords: [34.152850, -84.110810] },
+                    { name: "Sunrise of Johns Creek", coords: [34.028720, -84.201520] }
+                ];
+
+                locations.forEach(loc => {
+                    L.marker(loc.coords).addTo(map)
+                        .bindPopup(`<b>${loc.name}</b>`);
+                });
+            </script>
+
             <div class="venues-list" data-aos="fade-up" data-aos-delay="300">
                 <h3>Our Performance Venues</h3>
                 <div class="venue-grid">
@@ -450,7 +464,7 @@
                         <h4>Connect</h4>
                         <a href="#contact">Contact</a>
                         <a href="#leadership">Leadership</a>
-                        <a href="#map">Locations</a>
+                        <a href="#map-section">Locations</a>
                         <a href="https://www.instagram.com/tcisuwanee/" target="_blank">Instagram</a>
                     </div>
                 </div>
